force-app/main/default/objects/Company_Level_Junction_snapshot__c/Company_Level_Junction_snapshot__c.object-meta.xml
<CustomObject>
    <description>Sales Profile Company Level Junction snapshot</description>
    <label>Company Level Junction snapshot</label>
    <nameField>
        <label>Company Level Junction snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Level Junction snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>