force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Certification_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Certification_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the certification snapshot</description>
    <label>Certification Snapshot</label>
    <referenceTo>Certification_Snapshot__c</referenceTo>
    <relationshipLabel>Company Level Junction snapshots</relationshipLabel>
    <relationshipName>Company_Level_Junction_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>