force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Company_level_value__c.field-meta.xml
<CustomField>
    <fullName>Company_level_value__c</fullName>
    <formula>Company_Level__r.Level_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company level value</label>
    <type>Text</type>
</CustomField>