force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Company_Levels_snapshot__c.field-meta.xml
<CustomField>
    <fullName>Company_Levels_snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the company level snapshot record.</description>
    <label>Company Levels snapshot</label>
    <referenceTo>Company_Levels_snapshot__c</referenceTo>
    <relationshipLabel>Company Level Junction snapshots</relationshipLabel>
    <relationshipName>Company_Level_Junction_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>