force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Sales_Profile_Company_Level_Junction__c.field-meta.xml
<CustomField>
    <fullName>Sales_Profile_Company_Level_Junction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Profile Company Level Junction</label>
    <referenceTo>Sales_Profile_Company_Level_Junction__c</referenceTo>
    <relationshipLabel>Company Level Junction snapshots</relationshipLabel>
    <relationshipName>Company_Level_Junction_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>