force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Sales_Rep_Profile_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the snapshot the junction record is associated with.</description>
    <label>Sales Rep Profile Snapshot</label>
    <referenceTo>Sales_Rep_Profile_Snapshot__c</referenceTo>
    <relationshipLabel>Company Level Junction snapshots</relationshipLabel>
    <relationshipName>Company_Level_Junction_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>