force-app/main/default/objects/Company_Level_Junction_snapshot__c/fields/Snapshot_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Scheduled_Date__c</fullName>
    <label>Snapshot Scheduled Date</label>
    <type>Date</type>
</CustomField>